<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="app_copyright">Warning: this application is protected by copyright law and international treaties. Unauthorized reproduction or distribution of this program, or any part of it, may result in severe civil and criminal penalties, and will be prosecuted to the maximum extent possible under the law.</string>
    <string name="app_feedback_email">android@avast.com</string>
    <string name="about_title">About</string>
    <string name="about_app_version">Application version: %s</string>
    <string name="about_vps_version">Virus definition version: %s</string>
    <string name="about_vps_version_unknown">unknown</string>
    <string name="about_vps_definitions">Number of definitions: %s</string>
    <string name="about_feedback">Send Feedback</string>
    <string name="about_choose_email_app">Choose email application</string>
    <string name="about_eula_show">AVAST End User Agreement</string>
    <string name="about_eula_hide">Hide End User Agreement</string>
    <string name="about_button_rate">Rate this app</string>
    <string name="l_feedback_title">Feedback</string>
    <string name="l_feedback_email">Your email</string>
    <string name="l_feedback_email_hint">(optional)</string>
    <string name="l_feedback_name">Your name</string>
    <string name="l_feedback_name_hint">(optional)</string>
    <string name="l_feedback_type">Feedback type</string>
    <string name="l_feedback_type_selected">Selected: %s</string>
    <string name="l_feedback_description">Description</string>
    <string name="l_feedback_description_hint">The description of the report/request.</string>
    <string name="l_feedback_send_community_iq">Send Community IQ data</string>
    <string name="l_feedback_send_community_iq_desc">Send certain security-related information</string>
    <string name="l_feedback_send_device_log">Send the device log</string>
    <string name="l_feedback_send_device_log_desc">Send the last 30 minutes of the device log</string>
    <string name="l_feedback_send_dumpsys">Send detailed system info</string>
    <string name="l_feedback_send_dumpsys_desc">Send the detailed system information about running processes, installed applications, memory, cpu and battery state</string>
    <string name="l_feedback_button_cancel">Cancel</string>
    <string name="l_feedback_button_send">Send</string>
    <string name="msg_feedback_description_missing">The report description must be at least %s characters long.</string>
    <string name="msg_feedback_email_not_valid">The email address is not valid.</string>
    <string name="msg_feedback_sent">The feedback was sent, thank you!</string>
    <string name="l_feedback_sending">Sending feedback...</string>
    <string name="msg_feedback_failed">An error occurred, please try again later.</string>
    <string name="l_filter_add_custom">Custom number</string>
    <string name="l_filter_add_from_contactlist">Choose from Contact List</string>
    <string name="l_filter_enter_phone_number">Enter phone number</string>
    <string name="l_filter_enter_phone_number_advanced">"You can use wildcards to match more than one phone number. Use '*' for any number of digits and '.' for one digit. The number must contain at least 4 digits when you use the wildcards."</string>
    <string name="l_filter_custom_number_error_format">The entered number is not in a valid format.</string>
    <string name="l_filter_custom_number_error_too_short">The entered number is too short.</string>
    <string name="l_filter_custom_number_error_emergency">The entered number is an emergency number.</string>
    <string name="l_filter_advanced">Advanced</string>
    <string name="l_lorem_ipsum_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dapibus sagittis purus, vel facilisis lectus pellentesque eget. Praesent hendrerit odio id nulla semper bibendum.</string>
    <string name="l_lorem_ipsum_paragraph_more">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dapibus sagittis purus, vel facilisis lectus pellentesque eget. Praesent hendrerit odio id nulla semper bibendum. Fusce vitae nisi quam, quis volutpat ligula. Fusce ac enim nisi, quis lobortis ipsum. Nam vel dui arcu, eu pellentesque mi. Sed euismod viverra iaculis. Phasellus ipsum ligula, aliquam vel accumsan tincidunt, fringilla nec lacus. Sed venenatis, erat quis tempus cursus, nisi odio laoreet ipsum, a pharetra est eros nec massa. Nunc fringilla fermentum ligula sed euismod. Pellentesque ut mi ac metus viverra egestas.</string>
    <string name="description_logo">avast!</string>
    <string name="duplicate_command">A command of this type is already active. Please wait until it is handled.</string>
    <string name="l_cancel">Cancel</string>
    <string name="pref_password_protection">PIN protection</string>
    <string name="pref_password_change">Change avast! PIN</string>
    <string name="pref_password_recovery_number">Phone number for PIN recovery</string>
    <string name="pref_language">Change language</string>
    <string name="pref_language_current">Current: %s</string>
    <string name="pref_account_avast">avast! Account</string>
    <string name="pref_account_not_connected">Not connected to any account</string>
    <string name="l_connectioncheck">Fix connection problems</string>
    <string name="l_connectioncheck_description_short">Let avast! diagnose potential account connection problems and suggest solutions to fix any found problems</string>
    <string name="l_license">License Agreement</string>
    <string name="l_eula">"By tapping the Agree button,
you agree to the"</string>
    <string name="l_eula_show"><u>AVAST End User Agreement</u></string>
    <string name="l_privacy_policy">and the <u>Privacy Policy</u></string>
    <string name="l_eula_i_agree">Agree</string>
    <string name="l_eula_i_dont_agree">"Don't agree"</string>
    <string name="l_community_iq">Community IQ</string>
    <string name="l_community_iq_desc">By enabling this option, you are giving your consent to anonymously forward certain security-related information to AVAST</string>
    <string name="l_mon_short">Mo</string>
    <string name="l_tue_short">Tu</string>
    <string name="l_wed_short">We</string>
    <string name="l_thu_short">Th</string>
    <string name="l_fri_short">Fr</string>
    <string name="l_sat_short">Sa</string>
    <string name="l_sun_short">Su</string>
    <string name="l_root">Installation mode</string>
    <string name="l_root_desc">avast! Anti-Theft is able to run on your phone as normal installation. Additionally it offers special root features, like making the app hard-reset proof. Please select the desired installation mode.</string>
    <string name="l_root_desc2">If you choose to install rooted, avast! Anti-Theft Setup will request super user permissions upon installation.</string>
    <string name="l_continue">Continue</string>
    <string name="menu_about">About</string>
    <string name="menu_updates">Updates</string>
    <string name="settings">Settings</string>
    <string name="webshield">Web Shield</string>
    <string name="webshield_checkbox_subtitle">Enables/disables the shield with all its parts.</string>
    <string name="msg_download_addon">Install Firefox Add-On</string>
    <string name="msg_download_addon_details">Download and install the avast! Firefox Web Shield Add-On. This action must be performed within Firefox (only available if Firefox is installed).</string>
    <string name="l_webshield_phishing">Check for phishing sites</string>
    <string name="l_webshield_malware">Check for malicious sites</string>
    <string name="l_firewall_mode">Firewall mode</string>
    <string name="l_firewall_protocol_mode">Enable firewall log</string>
    <string name="l_firewall_access_protocol">Firewall log</string>
    <string name="l_firewall_protocol_mode_desc">If enabled, the firewall will log recent blocked traffic stats. THE LOG WILL BE CUT OFF AUTOMATICALLY AFTER A FEW MINUTES.</string>
    <string name="l_firewall_use_ipv6">Enable IPv6 support</string>
    <string name="l_firewall_rule_uppermost">Take highest priority</string>
    <string name="l_firewall_rule_uppermost_desc">Let avast! firewall rules take highest priority. This is useful if the firewall does not work on your phone when enabling the Android mobile data limit.</string>
    <string name="l_firewall_use_ipv6_desc">If enabled, firewall rules will also be applied to the IPv6 stack of the phone.</string>
    <string name="pref_updates_subtitle">Tap to edit settings related to automatic updates of virus definitions.</string>
    <string name="pref_notification_type_title">Notification icon</string>
    <string name="pref_notification_type_subtitle">Current: %s</string>
    <string name="pref_detectPUP">PUP detection</string>
    <string name="pref_detectPUP_hint">Treat Potentially Unwanted Programs (PUP) as malware</string>
    <string name="pref_globalActivityLogExternal">Save Activity Log to a file</string>
    <string name="pref_globalActivityLogExternal_hint">Save complete Activity Log to the file on the external storage</string>
    <string name="pref_scan_wakelock">CPU Wakelock</string>
    <string name="pref_scan_wakelock_hint">Keep the CPU running while scanning for viruses after the device has been put asleep</string>
    <string name="pref_account_avast_subtitle">Tap to manage the connection of avast! Mobile Security (and other AVAST products) to your avast! Account.</string>
    <string name="pref_account_status_reporting">Status reporting</string>
    <string name="pref_account_status_reporting_hint">Report program status to the avast! Account</string>
    <string name="pref_account_status_reporting_frequency">Reporting frequency</string>
    <string name="pref_account_status_reporting_frequency_hint">Every %s minutes</string>
    <string name="pref_uninstall_protection">Uninstall protection</string>
    <string name="pref_uninstall_protection_desc">avast! PIN is required in order to uninstall any application (PIN protection needs to be enabled)</string>
    <string name="pref_pin_timeout">App security timeout</string>
    <string name="pref_pin_timeout_hint">Your PIN will be required %s after leaving the app.</string>
    <string name="l_uninstallcheck">avast! Anti-Theft removal wizard</string>
    <string name="l_typosquatting_settings_checkbox">SiteCorrect</string>
    <string name="l_typosquatting_settings_checkbox_desc">"Fixes spelling errors when you type an address to the browser's address bar."</string>
    <string name="l_typosquatting_settings_autocorrect_checkbox">Automatically redirect</string>
    <string name="l_typosquatting_settings_autocorrect_checkbox_desc">If the box is unchecked, you will be asked what to do when a mistyped address is detected.</string>
</resources>