<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/bg_edge_color" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="false"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:avast="http://schemas.android.com/apk/res/com.avast.android.mobilesecurity">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:background="@drawable/bg_title" android:layout_width="fill_parent" android:layout_height="@dimen/titlebar_height">
            <TextView android:layout_gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/content_marginHorizontal" android:text="@string/settings" android:layout_weight="1.0" style="@style/ActivityTitle" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="@drawable/bg_menu_normal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.avast.android.generic.ui.widget.NextRow android:id="@id/r_updates" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowTitle="@string/menu_updates" avast:rowSubTitle="@string/pref_updates_subtitle" />
            <include layout="@layout/row_line_separator" />
            <com.avast.android.generic.ui.widget.NextRow android:id="@id/r_avastaccount" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowTitle="@string/pref_account_avast" avast:rowSubTitle="@string/pref_account_avast_subtitle" />
            <include layout="@layout/row_line_separator" />
            <com.avast.android.generic.ui.widget.CheckBoxRow android:id="@id/r_password_protection" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowTitle="@string/pref_password_protection" avast:rowDAO="none" />
            <include layout="@layout/row_line_separator_short" />
            <com.avast.android.generic.ui.widget.NextRow android:id="@id/r_change_password" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowTitle="@string/pref_password_change" />
            <include android:id="@id/r_password_recovery_separator" layout="@layout/row_line_separator_short" />
            <com.avast.android.generic.ui.widget.NextRow android:id="@id/r_password_recovery" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowTitle="@string/pref_password_recovery_number" />
            <include layout="@layout/row_line_separator_short" />
            <com.avast.android.generic.ui.widget.SelectorRow android:id="@id/r_password_timeout" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowKey="gPinTimeout" avast:rowTitle="@string/pref_pin_timeout" avast:rowSubTitle="@string/pref_pin_timeout_hint" avast:rowEntriesNames="@array/pref_pin_timeout_names" avast:rowEntriesValues="@array/pin_timeout_values" />
            <include layout="@layout/row_line_separator_short" />
            <com.avast.android.generic.ui.widget.CheckBoxRow android:id="@id/r_uninstall_protection" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowKey="gSettingsUninstallProtectionEnabled" avast:rowTitle="@string/pref_uninstall_protection" avast:rowSubTitle="@string/pref_uninstall_protection_desc" avast:rowDAO="preference" />
            <include layout="@layout/row_line_separator" />
            <com.avast.android.generic.ui.widget.CheckBoxRow android:id="@id/r_detectPUP" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowKey="gSettingsPupEnabled" avast:rowTitle="@string/pref_detectPUP" avast:rowSubTitle="@string/pref_detectPUP_hint" avast:rowDefaultValue="true" />
            <include layout="@layout/row_line_separator" />
            <com.avast.android.generic.ui.widget.CheckBoxRow android:id="@id/r_globalActivityLogExternal" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowKey="gSettingsGlobalActivityLogExternal" avast:rowTitle="@string/pref_globalActivityLogExternal" avast:rowSubTitle="@string/pref_globalActivityLogExternal_hint" avast:rowDefaultValue="true" />
            <include layout="@layout/row_line_separator" />
            <com.avast.android.generic.ui.widget.CheckBoxRow android:id="@id/r_scan_wakelock" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowKey="gSettingsScanWakelock" avast:rowTitle="@string/pref_scan_wakelock" avast:rowSubTitle="@string/pref_scan_wakelock_hint" avast:rowDefaultValue="true" />
            <include layout="@layout/row_line_separator" />
            <com.avast.android.generic.ui.widget.CheckBoxRow android:id="@id/r_communityIQ" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowTitle="@string/l_community_iq" avast:rowSubTitle="@string/l_community_iq_desc" avast:rowDAO="none" />
            <include layout="@layout/row_line_separator" />
            <com.avast.android.generic.ui.widget.SelectorRow android:id="@id/r_notification_type" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowKey="gSettingsNotificationType" avast:rowTitle="@string/pref_notification_type_title" avast:rowSubTitle="@string/pref_notification_type_subtitle" />
            <include layout="@layout/row_line_separator" />
            <com.avast.android.generic.ui.widget.LanguageSelectorRow android:id="@id/r_language" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowTitle="@string/pref_language" avast:rowSubTitle="@string/pref_language_current" />
            <include layout="@layout/row_line_separator" />
            <com.avast.android.generic.ui.widget.NextRow android:id="@id/r_uninstall_anti_theft" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowTitle="@string/l_uninstallcheck" />
            <include layout="@layout/row_line_separator" />
            <com.avast.android.generic.ui.widget.NextRow android:id="@id/r_about" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowTitle="@string/menu_about" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>