<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:avast="http://schemas.android.com/apk/res/com.avast.android.mobilesecurity">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/bg_title" android:layout_width="fill_parent" android:layout_height="@dimen/titlebar_height">
            <android.support.v4.app.FragmentBreadCrumbs android:id="@id/breadcrumbs" android:tag="breadcrumbs" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/content_marginHorizontal" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="@drawable/bg_menu_normal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.avast.android.generic.ui.widget.NextRow android:id="@id/r_firewallMode" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowTitle="@string/l_firewall_mode" />
            <include layout="@layout/row_line_separator_short" />
            <com.avast.android.generic.ui.widget.CheckBoxRow android:id="@id/r_ipv6Mode" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowKey="custom" avast:rowTitle="@string/l_firewall_use_ipv6" avast:rowSubTitle="@string/l_firewall_use_ipv6_desc" avast:rowDAO="none" />
            <include layout="@layout/row_line_separator_short" />
            <com.avast.android.generic.ui.widget.CheckBoxRow android:id="@id/r_ruleUppermost" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowKey="custom" avast:rowTitle="@string/l_firewall_rule_uppermost" avast:rowSubTitle="@string/l_firewall_rule_uppermost_desc" avast:rowDAO="none" />
            <include layout="@layout/row_line_separator_short" />
            <com.avast.android.generic.ui.widget.CheckBoxRow android:id="@id/r_protocolMode" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowKey="custom" avast:rowTitle="@string/l_firewall_protocol_mode" avast:rowSubTitle="@string/l_firewall_protocol_mode_desc" avast:rowDAO="none" />
            <include layout="@layout/row_line_separator_short" />
            <com.avast.android.generic.ui.widget.NextRow android:id="@id/r_firewallShowLog" android:layout_width="fill_parent" android:layout_height="wrap_content" avast:rowTitle="@string/l_firewall_access_protocol" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>